avi/ssl-ingress/nginx-ingress-ssl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-avi-ssl
spec:
  selector:
    matchLabels:
      app: nginx-avi-ssl
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx-avi-ssl
    spec:
      containers:
        - name: nginx
          image: gcr.io/kubernetes-development-244305/nginx:latest
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-avi-ssl-service
spec:
  selector:
    app: nginx-avi-ssl
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-avi-ssl-ingress
spec:
  tls:
    - secretName: nginx-cert-tls 
      hosts:
      - nginx-ssl.avi.tkg-vsp-lab.hyrulelab.com
  rules:
  - host: nginx-ssl.avi.tkg-vsp-lab.hyrulelab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-avi-ssl-service
            port:
              number: 80
